--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!doctype html>
-<html lang=en>
+<!DOCTYPE html>
+<html lang="en-US">
   <head>
     
-    <meta charset=utf-8>
+    <meta charset="utf-8">
     <title>deluxo</title>
     <style>
       * { font-family: sans-serif; }
@@ -10,14 +10,17 @@
       body { font-size: 1.3em; margin: 0; }
       #container { height: 100%; width: 100%; max-width: 600px; text-align: center; margin: 0 auto; display: table; }
       #container #align { display: table-cell; vertical-align: middle; width: 100%; }
-      p { margin: 40px auto 20px auto; font-weight: 300; }
-      a { color: #000; font-weight: bold; text-decoration: none; }
-      a:hover { background: #000; color: #fff; }
+      .para { margin: 40px auto 20px auto; font-weight: 300; }
+      .a1 { color: #000; font-weight: bold; text-decoration: none; }
+      .a1:hover { background: #000; color: #fff; }
       .sm { font-size: .8em; padding: 0 0 30px 0; margin: 10px 0 0 0; }
       .ps { margin: 0 0 -30px 0; }
       .ft { font-size: .6em; }
-      #token {height: 50px; position: absolute; pointer-events: auto; }
-      #tokenbubble {width: 900px; height: 600px; position: absolute; margin: -175px 0 0 -150px; pointer-events: none; }
+      #token { height: 50px; position: absolute; pointer-events: auto; }
+      #tokenbubble { width: 900px; height: 600px; position: absolute; margin: -175px 0 0 -150px; pointer-events: none; }
+      #fsbanner { position: absolute; height: auto; width: 100%; background-color: #000; color: #fff; font-size: 14px; font-weight: normal; padding: 0; text-align: center;}
+      .a2 { color: #fff; font-weight: bold; text-decoration: none;}
+      .a2:hover { background-color: #fff; color: #000; }
     </style>
 
     <!-- Google tag (gtag.js) -->
@@ -33,6 +36,11 @@
   </head>
   
   <body>
+
+    <div id="fsbanner">
+      <p style="margin: 5px;">The domain deluxo.com is for sale. Contact <a class="a2" href="mailto:offer@namerie.com">offer@namerie.com</a> for more information or <a class="a2" href="https://namerie.com/forsale.html?url=deluxo.com" target="_blank">make an offer</a>.</p>
+    </div>
+
     <div id="container">
       <div id="align">
         <div id="tokenbubble">
@@ -40,10 +48,10 @@
           <a href="https://deluxo.org" target="_blank"><img id="token" src="token.gif" /></a>
         </div>
         <img src="deluxo.png" width="300" height="75" />
-        <p class="sm"><i>internet company</i></p>
-        <p class="ps">email <u><a href="mailto:hello@deluxo.com">hello@deluxo.com</a></u> for more information</p>
-        <p>follow <u><a href="https://twitter.com/deluxo" target="_blank">@deluxo</a></u> for updates</p>
-        <p class="ft">© Deluxo LLC, 2018 - <script>document.write(new Date().getFullYear())</script></p>
+        <p class="para sm"><i>internet company</i></p>
+        <p class="para ps">email <u><a class="a1" href="mailto:hello@deluxo.com">hello@deluxo.com</a></u> for more information</p>
+        <p class="para">follow <u><a class="a1" href="https://twitter.com/deluxo" target="_blank">@deluxo</a></u> for updates</p>
+        <p class="para ft">© Deluxo LLC, 2018 - <script>document.write(new Date().getFullYear())</script></p>
       </div>
     </div>
     <script>
