--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <body>
 
     <div id="fsbanner">
-      <p style="margin: 5px;">The domain deluxo.com is for sale. Contact <a class="a2" href="mailto:offer@namerie.com">offer@namerie.com</a> for more information or <a class="a2" href="https://namerie.com/forsale.html?url=deluxo.com" target="_blank">make an offer</a>.</p>
+      <p style="margin: 5px;">The domain deluxo.com is for sale. Contact <a class="a2" href="mailto:offer@namerie.com">offer@namerie.com</a> or <a class="a2" href="https://namerie.com/forsale.html?url=deluxo.com" target="_blank">make an offer</a>.</p>
     </div>
 
     <div id="container">
