--- a/work/index.html
+++ b/work/index.html
@@ -115,7 +115,7 @@
                     <img src="../images/citc-white.png" alt="Crying in the Club" class="work-logo" id="citc-logo">
                     <div class="work-overlay-dark">
                         <h3>Crying in the Club®</h3>
-                        <p>Keping it real and simple with a clean, well-known font-face.</p>
+                        <p>Keeping it real and simple with a clean, well-known font-face.</p>
                         <a href="https://cryingintheclub.com" target="_blank" class="btn btn-outline-dark">View Site</a>
                     </div>
                 </div>
@@ -179,3 +179,4 @@
     <script src="../js/components.js"></script>
 </body>
 </html> 
+
